argocd/infra/backrest/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backrest
  name: backrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backrest
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backrest
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/control-plane"
          operator: "Exists"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - image: docker.io/garethgeorge/backrest:v1.14.1@sha256:b852979754281026230cc69fb11428e6d57c9a97784ab4a444ffc7934c53a215
          imagePullPolicy: IfNotPresent
          name: backrest
          resources:
            limits:
              memory: 4Gi
            requests:
              cpu: 100m
              memory: 1Gi
          ports:
            - containerPort: 9898
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
            - name: ssd
              mountPath: /userdata/ssd/
            - name: hostdata
              mountPath: /userdata/data
            - name: etc
              mountPath: /userdata/etc
            - name: mnt
              mountPath: /userdata/mnt
          readinessProbe:
            httpGet:
              path: /
              port: 9898
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 9898
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: ssd
          hostPath:
            path: /mnt/ssd
        - name: cache
          persistentVolumeClaim:
            claimName: cache
        - name: hostdata
          hostPath:
            path: /data
        - name: etc
          hostPath:
            path: /etc
        - name: mnt
          hostPath:
            path: /mnt
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: config
          persistentVolumeClaim:
            claimName: config
