argocd/infra/backrest/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Backrest
    gethomepage.dev/icon: backrest
    gethomepage.dev/description: "Backrest provides a WebUI which wraps the restic CLI and makes it easy to create repos, browse snapshots, and restore files."
    gethomepage.dev/pod-selector: app=backrest
  labels:
    app.kubernetes.io/instance: backrest-app
  name: backrest-httproute
  namespace: backrest
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - backrest.yanello.net
  rules:
    - backendRefs:
        - name: backrest
          namespace: backrest
          port: 9898
