argocd/infra/backrest/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Backrest
    gethomepage.dev/icon: backrest
    gethomepage.dev/description: "Backrest provides a WebUI which wraps the restic CLI and makes it easy to create repos, browse snapshots, and restore files."
    gethomepage.dev/pod-selector: app=backrest
  labels:
    app.kubernetes.io/instance: backrest-app
  name: backrest-httproute
  namespace: backrest
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - backrest.yanello.net
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
