argocd/infra/backrest/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: backrest
spec:
  endpointSelector:
    matchLabels:
      app: backrest
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "8085"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:app.kubernetes.io/name: authentik
      toPorts:
        - ports:
            - port: "9898"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toCIDR:
        - 192.168.0.0/16
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "30248"
              protocol: TCP
